[package]
name = "prize"
version = "0.1.0"
description = "PRize - Decentralized Micro-Bounty Platform on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "prize"

[programs.localnet]
prize = "N4tunukgDEgapkstYPKrZZLCAC59EapzrWq2d724yCp"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.32.1"
anchor-spl = "0.32.1"
solana-program = "2.2.0"
